--- a/css/foundation.css
+++ b/css/foundation.css
@@ -231,7 +231,7 @@ img {
 svg:not(:root) {
   overflow: hidden; }
 
-.callout li {list-style-type:square;color: #465d27;}  
+.callout li {list-style-type:square;color: #698b3b;}  
   .callout {
   position: relative;
   margin: 0 0 1rem 0;
